fixed hours_rnd function logic error and added wrapping to the checkedinList CSS

--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -69,6 +69,8 @@ thead {
 td {
   text-align: center;
   height: 33px;
+  max-width: 500px;
+  overflow-wrap: break-word;
 }
 
 .checkBoxContainer {
